<resources>
    <string name="app_name">MDPApp</string>
    <string name="mdp_key">MDP25</string>
    <string name="forward">ARDUINO:FC</string>
    <string name="turn_left">ARDUINO:LC</string>
    <string name="turn_right">ARDUINO:RC</string>
    <string name="back">ARDUINO:RB</string>
    <string name="request_arena">RPI:RA</string>
    <string name="start_explore">ALGO:STAE</string>
    <string name="stop_explore">ALGO:STOE</string>
    <string name="start_shortest">ALGO:SSP</string>
    <!--<string name="forward">0xE2</string>
    <string name="turn_left">0xE4</string>
    <string name="turn_right">0xE5</string>
    <string name="back">RB</string>
    <string name="request_arena">RA</string>
    <string name="start_explore">STAE</string>
    <string name="stop_explore">STOE</string>
    <string name="start_shortest">SSP</string>-->

    <string name="bluetooth">Bluetooth</string>
    <string name="updateMode">Manual</string>
    <string name="log">Log</string>
    <string name="reconfig">String Commands</string>
    <string name="refresh">Refresh</string>
    <string name="startExplore">STAE</string>
    <string name="stopExplore">STOE</string>
    <string name="motion">Motion Mode</string>
    <string name="controller">Controller Mode</string>
    <string name="startShortestPath">SSP</string>
    <string name="sendTextDialog">Send Text</string>
</resources>
