<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/findBTBtn"
        android:title="@string/bluetooth" />

    <item
        android:id="@+id/manualBtn"
        android:title="@string/updateMode" />
    <item
        android:id="@+id/refreshBtn"
        android:visible="false"
        android:title="@string/refresh" />
    <!--<item
        android:id="@+id/exploreBtn"
        android:title="@string/startExplore" />
    <item
        android:id="@+id/sspBtn"
        android:title="@string/startShortestPath" />-->
    <item
        android:id="@+id/logBtn"
        android:title="@string/log" />
    <item
        android:id="@+id/motionBtn"
        android:title="@string/motion" />
    <item
        android:id="@+id/reconfigBtn"
        android:title="@string/reconfig" />
    <item
        android:id="@+id/sendTextDialogBtn"
        android:title="@string/sendTextDialog" />
</menu>